--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,7 +2,12 @@ eclipse.preferences.version=1
 encoding//WebContent/01-text(1).html=UTF-8
 encoding//WebContent/02-text(2).html=UTF-8
 encoding//WebContent/04-xml(1).html=UTF-8
+encoding//WebContent/05-xml(2).html=UTF-8
+encoding//WebContent/06-idcheck.html=UTF-8
+encoding//WebContent/07-login.html=UTF-8
+encoding//WebContent/Exam1/Now.jsp=UTF-8
 encoding//WebContent/ajax/text/01.txt=UTF-8
 encoding//WebContent/ajax/text/category-data.html=UTF-8
+encoding//WebContent/jquery_sample/Chapter02/05/sample2_load.html=UTF-8
 encoding/<project>=UTF-8
 encoding/WebContent=UTF-8
