<jdbc> <트랜잭션> <커넥션 풀>

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -9,5 +9,6 @@ encoding//WebContent/Exam1/Now.jsp=UTF-8
 encoding//WebContent/ajax/text/01.txt=UTF-8
 encoding//WebContent/ajax/text/category-data.html=UTF-8
 encoding//WebContent/jquery_sample/Chapter02/05/sample2_load.html=UTF-8
+encoding//src/jdbcEx/ConnectionPool.java=UTF-8
 encoding/<project>=UTF-8
 encoding/WebContent=UTF-8
