--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -103,12 +103,67 @@
     <url-pattern>*.tiles</url-pattern>
   </servlet-mapping> 
   
-  
-  
-  
   <!-- 타일 요청을 uri를 통해 지정할 수 있도록  -->
    
-   
+  
+   <!-- mvc 패턴 공부를 위한 설정 시작  --> 
+  <!-- @WebServlet("simple") 과 동일하다. -->
+  
+  <servlet>
+	<servlet-name>SimpleController</servlet-name>
+	<servlet-class>mvc.SimpleController</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+	<servlet-name>SimpleController</servlet-name>
+	<url-pattern>/simple</url-pattern>
+	</servlet-mapping>
+  
+  <!-- mvc 패턴 공부를 위한 설정 시작  --> 
+  
+  
+  
+  
+  
+  <!-- 시작 -->
+  
+  	<servlet>
+	<servlet-name>ControllerUsingFile</servlet-name>
+	<servlet-class>mvc.controller.ControllerUsingFile</servlet-class>
+	<init-param>
+		<param-name>configFile</param-name>
+		<param-value>/WEB-INF/commandHandler.properties</param-value>
+	</init-param>
+	</servlet>
+	<servlet-mapping>
+	<servlet-name>ControllerUsingFile</servlet-name>
+	<url-pattern>/controllerUsingFile</url-pattern>
+	</servlet-mapping>
+  
+    <!-- 끝 -->
+  
+  
+  
+  
+  <!-- 시작 -->
+  <servlet>
+	<servlet-name>ControllerUsingURI</servlet-name>
+	<servlet-class>mvc.controller.ControllerUsingURI</servlet-class>
+	<init-param>
+		<param-name>configFile2</param-name>
+		<param-value>
+			/WEB-INF/commandHandlerURI.properties
+		</param-value>
+	</init-param>
+</servlet>
+	
+<servlet-mapping>
+	<servlet-name>ControllerUsingURI</servlet-name>
+	<url-pattern>*.do</url-pattern>
+</servlet-mapping>
+  
+ <!-- 끝 --> 
+  
   
   
   
